tests/ui/const-not-fn.stderr
error: only allowed on an impl or fn item
 --> tests/ui/const-not-fn.rs:1:28
  |
1 | #[rustversion::attr(all(), const)]
  |                            ^^^^^
